--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,22 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+
+
+    <!--   MySql connection pool-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.20</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
+    <dependency>
+      <groupId>c3p0</groupId>
+      <artifactId>c3p0</artifactId>
+      <version>0.9.1.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
